@@ -1,7 +1,0 @@
-
-// Author: Chaivit Poovanich
-// October 14, 1998
-// Modify by : Paisarn Charoenpornsawat
-// July 9,1999
-
-char *d2triepath;
